fix: adjust letter-spacing for improved text appearance and update font source paths for consistency

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,13 +12,13 @@
 
 @font-face {
   font-family: "Karla";
-  src: url("./assets/fonts/Karla/Karla-VariableFont_wght.ttf")
+  src: url("./assets/fonts/inter/inter-variable-font.ttf")
     format("truetype");
 }
 
 @font-face {
   font-family: "Fira";
-  src: url("./assets/fonts/Fira_Code/FiraCode-VariableFont_wght.ttf")
+  src: url("./assets/fonts/inter/inter-variable-font.ttf")
     format("truetype");
 }
 
